load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("//bazel:defs.bzl", "smithy_cpp_client_library", "smithy_cpp_server_library", "smithy_cpp_types_library")
load(":defs_test.bzl", "defs_test_suite")

# Rule instances the analysis tests inspect; building them is also an in-tree
# compile test of rule-generated code.
smithy_cpp_client_library(
    name = "greeter_client",
    srcs = [
        "greeter.smithy",
        "greeter_simplerestjson.smithy",
    ],
    namespace = "smithy::cpp::ruletest",
    service = "smithy.cpp.ruletest#Greeter",
)

smithy_cpp_server_library(
    name = "greeter_server",
    srcs = [
        "greeter.smithy",
        "greeter_simplerestjson.smithy",
    ],
    namespace = "smithy::cpp::ruletest",
    service = "smithy.cpp.ruletest#Greeter",
)

smithy_cpp_types_library(
    name = "greeter_types",
    srcs = [
        "greeter.smithy",
        "greeter_simplerestjson.smithy",
    ],
    namespace = "smithy::cpp::ruletest",
    service = "smithy.cpp.ruletest#Greeter",
)

# Valid but manual-tagged + testonly: the attrs-forwarding analysis test
# asserts both reach the internal generate target.
smithy_cpp_types_library(
    name = "greeter_manual_types",
    testonly = True,
    srcs = ["greeter.smithy"],
    namespace = "smithy::cpp::ruletest",
    service = "smithy.cpp.ruletest#Greeter",
    tags = ["manual"],
)

# Deliberately misconfigured instances for the wiring-failure tests (types
# mode: the failure happens before mode matters). `manual` keeps them (and
# the macro's internal targets) out of wildcard builds; only the
# expect_failure tests analyze them.
smithy_cpp_types_library(
    name = "greeter_smithy_dots_namespace",
    srcs = ["greeter.smithy"],
    namespace = "smithy.cpp.ruletest",
    service = "smithy.cpp.ruletest#Greeter",
    tags = ["manual"],
)

smithy_cpp_types_library(
    name = "greeter_bare_service_name",
    srcs = ["greeter.smithy"],
    namespace = "smithy::cpp::ruletest",
    service = "Greeter",
    tags = ["manual"],
)

# Functional check that a model assembled from multiple files (base +
# protocol overlay) generates working code: the generated client round-trips
# against the generated server in-process.
cc_test(
    name = "greeter_roundtrip_test",
    size = "small",
    srcs = ["greeter_roundtrip_test.cc"],
    deps = [
        ":greeter_client",
        ":greeter_server",
        "//runtime:client",
        "//runtime:http",
        "@googletest//:gtest_main",
    ],
)

defs_test_suite(name = "defs_tests")
