load("@rules_cc//cc:defs.bzl", "cc_test")
load("@smithy_cpp//bazel:defs.bzl", "smithy_cpp_client_library", "smithy_cpp_server_library")

# The base model is protocol-agnostic (the upstream Smithy way); each pair of
# targets binds it to a concrete protocol with an `apply` overlay. The same
# model generates a REST client/server and an RPC client/server side by side.
smithy_cpp_client_library(
    name = "todo_client",
    srcs = [
        "model/bindings/simplerestjson.smithy",
        "model/todo.smithy",
    ],
    namespace = "acme::todo",
    service = "acme.todo#Todo",
)

smithy_cpp_server_library(
    name = "todo_server",
    srcs = [
        "model/bindings/simplerestjson.smithy",
        "model/todo.smithy",
    ],
    namespace = "acme::todo",
    service = "acme.todo#Todo",
)

smithy_cpp_client_library(
    name = "todo_cbor_client",
    srcs = [
        "model/bindings/rpcv2cbor.smithy",
        "model/todo.smithy",
    ],
    namespace = "acme::todo::cbor",
    service = "acme.todo#Todo",
)

smithy_cpp_server_library(
    name = "todo_cbor_server",
    srcs = [
        "model/bindings/rpcv2cbor.smithy",
        "model/todo.smithy",
    ],
    namespace = "acme::todo::cbor",
    service = "acme.todo#Todo",
)

smithy_cpp_client_library(
    name = "todo_jsonrpc_client",
    srcs = [
        "model/bindings/jsonrpc2.smithy",
        "model/todo.smithy",
    ],
    namespace = "acme::todo::jsonrpc",
    service = "acme.todo#Todo",
)

smithy_cpp_server_library(
    name = "todo_jsonrpc_server",
    srcs = [
        "model/bindings/jsonrpc2.smithy",
        "model/todo.smithy",
    ],
    namespace = "acme::todo::jsonrpc",
    service = "acme.todo#Todo",
)

# Production-transport acceptance: the same generated service on
# BeastServerTransport + BeastHttpClient::FromConfig (the production-guide
# wiring), including the handler-executor and throwing-handler paths. Behind
# a download-blocking proxy exclude it like the main repo's Beast targets:
# bazel test //... -- -//:todo_beast_acceptance_test
cc_test(
    name = "todo_beast_acceptance_test",
    size = "small",
    srcs = ["todo_beast_acceptance_test.cc"],
    deps = [
        ":todo_client",
        ":todo_server",
        "@googletest//:gtest_main",
        "@smithy_cpp//runtime:client",
        "@smithy_cpp//runtime:http",
        "@smithy_cpp//runtime:http_beast",
        "@smithy_cpp//runtime:server",
        "@smithy_cpp//runtime:test_tls_identity",
    ],
)

# The generated client integration-tests the generated server (the Phase 5
# pattern): loopback and a real socket on an ephemeral port.
cc_test(
    name = "todo_integration_test",
    size = "small",
    srcs = ["todo_integration_test.cc"],
    deps = [
        ":todo_cbor_client",
        ":todo_cbor_server",
        ":todo_client",
        ":todo_jsonrpc_client",
        ":todo_jsonrpc_server",
        ":todo_server",
        "@googletest//:gtest_main",
        "@smithy_cpp//runtime:client",
        "@smithy_cpp//runtime:http",
        "@smithy_cpp//runtime:server",
    ],
)
