load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@smithy_cpp//bazel:defs.bzl", "smithy_cpp_client_library", "smithy_cpp_server_library")

# The base model is protocol-agnostic (the upstream Smithy way); each pair of
# targets binds it to a concrete protocol with an `apply` overlay. The same
# model generates a REST client/server and an RPC client/server side by side.
smithy_cpp_client_library(
    name = "todo_client",
    srcs = [
        "model/bindings/simplerestjson.smithy",
        "model/todo.smithy",
    ],
    namespace = "acme::todo",
    service = "acme.todo#Todo",
)

smithy_cpp_server_library(
    name = "todo_server",
    srcs = [
        "model/bindings/simplerestjson.smithy",
        "model/todo.smithy",
    ],
    namespace = "acme::todo",
    service = "acme.todo#Todo",
)

smithy_cpp_client_library(
    name = "todo_cbor_client",
    srcs = [
        "model/bindings/rpcv2cbor.smithy",
        "model/todo.smithy",
    ],
    namespace = "acme::todo::cbor",
    service = "acme.todo#Todo",
)

smithy_cpp_server_library(
    name = "todo_cbor_server",
    srcs = [
        "model/bindings/rpcv2cbor.smithy",
        "model/todo.smithy",
    ],
    namespace = "acme::todo::cbor",
    service = "acme.todo#Todo",
)

smithy_cpp_client_library(
    name = "todo_jsonrpc_client",
    srcs = [
        "model/bindings/jsonrpc2.smithy",
        "model/todo.smithy",
    ],
    namespace = "acme::todo::jsonrpc",
    service = "acme.todo#Todo",
)

smithy_cpp_server_library(
    name = "todo_jsonrpc_server",
    srcs = [
        "model/bindings/jsonrpc2.smithy",
        "model/todo.smithy",
    ],
    namespace = "acme::todo::jsonrpc",
    service = "acme.todo#Todo",
)

# Production-transport acceptance: the same generated service on
# BeastServerTransport + BeastHttpClient::FromConfig (the production-guide
# wiring), including the handler-executor and throwing-handler paths. Behind
# a download-blocking proxy exclude it like the main repo's Beast targets:
# bazel test //... -- -//:todo_beast_acceptance_test
cc_test(
    name = "todo_beast_acceptance_test",
    size = "small",
    srcs = ["todo_beast_acceptance_test.cc"],
    deps = [
        ":todo_client",
        ":todo_server",
        "@googletest//:gtest_main",
        "@smithy_cpp//runtime:client",
        "@smithy_cpp//runtime:connection_event_recorder",
        "@smithy_cpp//runtime:http",
        "@smithy_cpp//runtime:http_beast",
        "@smithy_cpp//runtime:server",
        "@smithy_cpp//runtime:test_tls_identity",
    ],
)

# The generated client integration-tests the generated server (the Phase 5
# pattern): loopback and a real socket on an ephemeral port.
cc_test(
    name = "todo_integration_test",
    size = "small",
    srcs = ["todo_integration_test.cc"],
    deps = [
        ":todo_cbor_client",
        ":todo_cbor_server",
        ":todo_client",
        ":todo_jsonrpc_client",
        ":todo_jsonrpc_server",
        ":todo_server",
        "@googletest//:gtest_main",
        "@smithy_cpp//runtime:client",
        "@smithy_cpp//runtime:http",
        "@smithy_cpp//runtime:server",
    ],
)

# Out-of-tree acceptance for the event-stream framing codec (ADR-0014
# slice 1): the documented consumer surface — plain-value headers, the
# canonical chunked decode loop, FindString dispatch — compiles and runs
# against the runtime targets alone, ahead of the generated streaming API.
cc_test(
    name = "eventstream_consumer_test",
    size = "small",
    srcs = ["eventstream_consumer_test.cc"],
    deps = [
        "@googletest//:gtest_main",
        "@smithy_cpp//runtime:core",
        "@smithy_cpp//runtime:eventstream",
    ],
)

# Streaming-transport acceptance (ADR-0015, the e2e ADR-0014's amendment
# requires): a consumer dials the upgraded server and drains real frames
# through the module boundary. Beast-backed like todo_beast_acceptance_test;
# behind a download-blocking proxy exclude it the same way:
# bazel test //... -- -//:todo_beast_acceptance_test -//:websocket_acceptance_test
cc_test(
    name = "websocket_acceptance_test",
    size = "small",
    srcs = ["websocket_acceptance_test.cc"],
    deps = [
        "@googletest//:gtest_main",
        "@smithy_cpp//runtime:eventstream",
        "@smithy_cpp//runtime:http",
        "@smithy_cpp//runtime:http_beast",
    ],
)

# Completion-driven streams acceptance (ADR-0019): the async socket
# primitives, the shared-session serve seam, the coroutine adapter, and
# async-delivery fan-out, all through the module boundary. Beast-backed;
# behind a download-blocking proxy exclude it with the other Beast targets:
# bazel test //... -- -//:todo_beast_acceptance_test
# -//:websocket_acceptance_test -//:async_acceptance_test
cc_test(
    name = "async_acceptance_test",
    size = "small",
    srcs = ["async_acceptance_test.cc"],
    deps = [
        "@googletest//:gtest_main",
        "@smithy_cpp//runtime:eventstream",
        "@smithy_cpp//runtime:http",
        "@smithy_cpp//runtime:http_beast",
        "@smithy_cpp//runtime:server",
    ],
)

# Generated streaming API acceptance (ADR-0016, slice 3's consumer e2e): the
# smallest bidirectional event-stream service, client and server both
# generated inside this module's build graph.
smithy_cpp_client_library(
    name = "chat_stream_client",
    srcs = ["model/chatstream.smithy"],
    namespace = "acme::chat",
    service = "acme.chat#Chat",
)

smithy_cpp_server_library(
    name = "chat_stream_server",
    srcs = ["model/chatstream.smithy"],
    namespace = "acme::chat",
    service = "acme.chat#Chat",
)

# The reconnect loop (ADR-0020) as real shell-commanded processes: the
# generated streaming server with SessionRegistry grace, generated clients,
# kill -9 / rejoin / expiry — the consumer e2e for Detach/Resume. Beast on
# both ends; behind a download-blocking proxy exclude it with the other
# Beast targets.
cc_binary(
    name = "chat_reconnect_server",
    srcs = ["chat_reconnect_server_main.cc"],
    deps = [
        ":chat_stream_server",
        "@smithy_cpp//runtime:core",
        "@smithy_cpp//runtime:http_beast",
        "@smithy_cpp//runtime:server",
    ],
)

cc_binary(
    name = "chat_reconnect_client",
    srcs = ["chat_reconnect_client_main.cc"],
    deps = [
        ":chat_stream_client",
        "@smithy_cpp//runtime:client",
        "@smithy_cpp//runtime:core",
        "@smithy_cpp//runtime:eventstream",
        "@smithy_cpp//runtime:http_beast",  # the generated client's default dialer
    ],
)

sh_test(
    name = "chat_reconnect_cli_test",
    size = "medium",  # a real 3s grace expiry plus process choreography
    srcs = ["chat_reconnect_cli_test.sh"],
    args = [
        "$(rootpath :chat_reconnect_server)",
        "$(rootpath :chat_reconnect_client)",
    ],
    data = [
        ":chat_reconnect_client",
        ":chat_reconnect_server",
    ],
    tags = ["requires-network"],
)

# The same hub on the GENERATED async surface (ADR-0021): zero parked
# threads, served by the generated ChatAsyncHandler through the
# shared-session seam. Same script, same phases, same generated clients —
# passing on both seams is the cross-seam parity proof.
cc_binary(
    name = "chat_async_reconnect_server",
    srcs = ["chat_async_reconnect_server_main.cc"],
    deps = [
        ":chat_stream_server",
        "@smithy_cpp//runtime:core",
        "@smithy_cpp//runtime:http_beast",
        "@smithy_cpp//runtime:server",
    ],
)

sh_test(
    name = "chat_async_reconnect_cli_test",
    size = "medium",  # a real 3s grace expiry plus process choreography
    srcs = ["chat_reconnect_cli_test.sh"],
    args = [
        "$(rootpath :chat_async_reconnect_server)",
        "$(rootpath :chat_reconnect_client)",
    ],
    data = [
        ":chat_async_reconnect_server",
        ":chat_reconnect_client",
    ],
    tags = ["requires-network"],
)

# One bidi round trip through the module boundary, the streams riding an
# injected InMemoryWebSocketPair dialer — no wire, no sockets. Linking a
# generated streaming client still pulls the default Beast dialer's
# definition (the defs.bzl extra-deps seam), so behind a download-blocking
# proxy exclude this with the Beast targets:
# bazel test //... -- -//:todo_beast_acceptance_test
# -//:websocket_acceptance_test -//:streaming_acceptance_test
cc_test(
    name = "streaming_acceptance_test",
    size = "small",
    srcs = ["streaming_acceptance_test.cc"],
    deps = [
        ":chat_stream_client",
        ":chat_stream_server",
        "@googletest//:gtest_main",
        "@smithy_cpp//runtime:client",
        "@smithy_cpp//runtime:eventstream",
        "@smithy_cpp//runtime:http",
        "@smithy_cpp//runtime:http_beast",
        "@smithy_cpp//runtime:server",
    ],
)

# The jsonRpc2 stream wire (ADR-0023, issue #123) through the module
# boundary: the smallest bidirectional service on the JSON-RPC-native wire,
# client and server both generated inside this module's build graph.
smithy_cpp_client_library(
    name = "tally_stream_client",
    srcs = ["model/tallystream.smithy"],
    namespace = "acme::tally",
    service = "acme.tally#Tally",
)

smithy_cpp_server_library(
    name = "tally_stream_server",
    srcs = ["model/tallystream.smithy"],
    namespace = "acme::tally",
    service = "acme.tally#Tally",
)

# The wire as real shell-commanded processes: the generated async server on
# Beast's raw-text mode, the generated client dialing the shared endpoint —
# opening params, totals both ways, the terminal result's clean end, and
# the typed Busted through the terminal error envelope. Beast on both ends;
# behind a download-blocking proxy exclude it with the other Beast targets.
cc_binary(
    name = "jsonrpc_stream_server",
    srcs = ["jsonrpc_stream_server_main.cc"],
    deps = [
        ":tally_stream_server",
        "@smithy_cpp//runtime:core",
        "@smithy_cpp//runtime:http_beast",
        "@smithy_cpp//runtime:server",
    ],
)

cc_binary(
    name = "jsonrpc_stream_client",
    srcs = ["jsonrpc_stream_client_main.cc"],
    deps = [
        ":tally_stream_client",
        "@smithy_cpp//runtime:client",
        "@smithy_cpp//runtime:core",
        "@smithy_cpp//runtime:http_beast",  # the generated client's default dialer
    ],
)

# The ill-behaved half of the CLI suite: raw stdin lines as text frames,
# so the script can flex the reserved-code refusals and the mid-stream
# policing — edges the well-behaved generated client cannot produce.
cc_binary(
    name = "jsonrpc_raw_peer",
    srcs = ["jsonrpc_raw_peer_main.cc"],
    deps = [
        "@smithy_cpp//runtime:core",
        "@smithy_cpp//runtime:eventstream",
        "@smithy_cpp//runtime:http",
        "@smithy_cpp//runtime:http_beast",
    ],
)

sh_test(
    name = "jsonrpc_stream_cli_test",
    size = "small",
    srcs = ["jsonrpc_stream_cli_test.sh"],
    args = [
        "$(rootpath :jsonrpc_stream_server)",
        "$(rootpath :jsonrpc_stream_client)",
        "$(rootpath :jsonrpc_raw_peer)",
    ],
    data = [
        ":jsonrpc_raw_peer",
        ":jsonrpc_stream_client",
        ":jsonrpc_stream_server",
    ],
    tags = ["requires-network"],
)
