load("@rules_cc//cc:defs.bzl", "cc_test")

# Behavior tests for the generated cafe types (rpcv2Cbor fixture model).

cc_test(
    name = "generated_client_test",
    size = "small",
    srcs = ["generated_client_test.cc"],
    deps = [
        "//examples/cafe/generated:client",
        "//runtime:cbor",
        "//runtime:compression",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "generated_types_test",
    size = "small",
    srcs = ["generated_types_test.cc"],
    deps = [
        "//examples/cafe/generated:types",
        "@googletest//:gtest_main",
    ],
)
