load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

# Full-duplex chat example (ADR-0016; PLAN §Phase 8's exit criterion): the
# generated client and generated server exercising event streams end to end.
# Both e2e targets link the generated streaming client, which carries the
# default Beast dialer (//runtime:http_beast), so behind a download-blocking
# proxy exclude them like the other Beast targets (docs/development.md,
# "Machine-specific Bazel flags"); CI runs both.

# In-memory half: every streaming flow through an injected
# InMemoryWebSocketPair dialer wired to the generated StreamRouter — no wire,
# no sockets (Beast is a link-time passenger only).
cc_test(
    name = "chat_e2e_test",
    size = "small",
    srcs = [
        "chat_e2e_test.cc",
        "room_handler.h",
        "stream_test_fixture.h",
    ],
    deps = [
        "//examples/chat/generated:client",
        "//examples/chat/generated:server",
        "//runtime:client",
        "//runtime:http",
        "//runtime:server",
        "@googletest//:gtest_main",
    ],
)

# Real-WebSocket half — the exit criterion itself: BeastServerTransport
# upgrades on the StreamRouter's gate/serve, the generated client dials real
# loopback WebSockets (TLS included) through the default Beast dialer.
cc_test(
    name = "chat_e2e_beast_test",
    size = "small",
    srcs = [
        "chat_e2e_beast_test.cc",
        "room_handler.h",
    ],
    tags = ["requires-network"],
    deps = [
        "//examples/chat/generated:client",
        "//examples/chat/generated:server",
        "//runtime:client",
        "//runtime:http",
        "//runtime:http_beast",
        "//runtime:server",
        "//runtime:test_tls_identity",
        "@googletest//:gtest_main",
    ],
)

# The browser story (issue #113, ADR-0018): a browser-fidelity raw peer —
# subprotocol offer, Origin header, JSON text both ways — against the
# generated service with websocket_accept_json_frames on and RequireOrigin
# chained ahead of the StreamRouter's gate; a native generated client
# converses beside it, still binary.
cc_test(
    name = "chat_browser_e2e_test",
    size = "small",
    srcs = [
        "chat_browser_e2e_test.cc",
        "room_handler.h",
    ],
    tags = ["requires-network"],
    deps = [
        "//examples/chat/generated:client",
        "//examples/chat/generated:server",
        "//runtime:client",
        "//runtime:eventstream_json",
        "//runtime:http",
        "//runtime:http_beast",
        "//runtime:server",
        "@boost.asio",
        "@boost.beast",
        "@googletest//:gtest_main",
    ],
)

# The consumer hub (issue #112): SessionRegistry + EventStream::Share turning
# the chat service into a fan-out room server — the reference for the
# multi-client pattern the Go-style WebSocket hub hand-rolls. In-memory half:
# several generated clients against HubHandler through injected pairs.
cc_test(
    name = "hub_e2e_test",
    size = "small",
    srcs = [
        "hub_e2e_test.cc",
        "hub_handler.h",
        "stream_test_fixture.h",
    ],
    deps = [
        "//examples/chat/generated:client",
        "//examples/chat/generated:server",
        "//runtime:client",
        "//runtime:http",
        "//runtime:server",
        "@googletest//:gtest_main",
    ],
)

# Real-process half of the hub example: the server binary hub_cli_test.sh
# SIGTERMs into a drained exit...
cc_binary(
    name = "hub_server",
    srcs = [
        "hub_handler.h",
        "hub_server_main.cc",
    ],
    deps = [
        "//examples/chat/generated:server",
        "//runtime:core",
        "//runtime:http_beast",
        "//runtime:server",
    ],
)

# ...and the shell-drivable client: commands in on stdin, one event per line
# out on stdout (also the client-side Share() demo — the stdin thread sends
# through an owning handle while main runs the receive loop).
cc_binary(
    name = "hub_client",
    srcs = ["hub_client_main.cc"],
    deps = [
        "//examples/chat/generated:client",
        "//runtime:client",
        "//runtime:core",
        "//runtime:http",
    ],
)

# The thread-free hub (ADR-0019): the same Converse wire served through the
# shared-session seam — a Detached coroutine per connection over
# AsyncEventStream, fan-out through an async-delivery registry, no parked
# thread per session. Route matching and serde are hand-mounted on the
# public envelope helpers (the generated streaming serve path stays
# blocking in this slice).
cc_binary(
    name = "async_hub_server",
    srcs = ["async_hub_server_main.cc"],
    deps = [
        "//examples/chat/generated:serde",
        "//examples/chat/generated:types",
        "//runtime:core",
        "//runtime:eventstream",
        "//runtime:http",
        "//runtime:http_beast",
        "//runtime:json",
        "//runtime:server",
    ],
)

# The async hub as real processes, driven by the same shell-commanded
# hub_client as the sync suite: fan-out, redaction, the typed refusal,
# departures, SIGTERM → drain → exit 0 — with zero per-session threads
# server-side.
sh_test(
    name = "async_hub_cli_test",
    size = "small",
    srcs = ["async_hub_cli_test.sh"],
    args = [
        "$(rootpath :async_hub_server)",
        "$(rootpath :hub_client)",
    ],
    data = [
        ":async_hub_server",
        ":hub_client",
    ],
    tags = ["requires-network"],
)

# Executes the hub as real processes over real WebSockets: one server, four
# clients (two talkers, a watcher, an impostor) driven by shell commands
# through their stdin — fan-out, redaction, the typed refusal, clean and
# abrupt departures, live occupancy, SIGTERM → drain → exit 0.
sh_test(
    name = "hub_cli_test",
    size = "small",
    srcs = ["hub_cli_test.sh"],
    args = [
        "$(rootpath :hub_server)",
        "$(rootpath :hub_client)",
    ],
    data = [
        ":hub_client",
        ":hub_server",
    ],
    tags = ["requires-network"],
)
