load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

# The serving-lifecycle example (issue #49); docs/production-guide.md
# § "Serving lifecycle" is the walkthrough.
cc_binary(
    name = "bookstore_server",
    srcs = ["serve_main.cc"],
    deps = [
        "//examples/simplerestjson/generated:server",
        "//examples/simplerestjson/generated:types",
        "//runtime:core",
        "//runtime:http_beast",
    ],
)

# Executes the lifecycle end to end: ephemeral port, POST + GET + modeled
# 404 over the wire, SIGTERM, clean drained exit.
sh_test(
    name = "bookstore_server_lifecycle_test",
    size = "small",
    srcs = ["bookstore_server_lifecycle_test.sh"],
    args = ["$(rootpath :bookstore_server)"],
    data = [":bookstore_server"],
)
